# litestar-pulse

./: .gitignore  README.rst  install.sh  pyproject.toml
docs/: 10-design.rst  20-install.rst  30-formbuilder.rst
etc/bashrc.d/: 10-uv-setup
etc/inst-scripts/: inst-deps.sh  inst-stage-2.sh
src/litestar_pulse/assets/css/: custom.css  fixer.css  login.css  theme.css
src/litestar_pulse/assets/js/: formutils.js  genutils.js
src/litestar_pulse/cli/: commands.py  debugging.py
src/litestar_pulse/config/: app.py  db.py  db_aa.py  filestorage.py
src/litestar_pulse/db/: __init__.py  handler.py  initdb.py
src/litestar_pulse/db/fixtures/: coreaccounts.yaml  seed.py
src/litestar_pulse/db/models/: account.py  coremixins.py  enumkey.py  meta.py  rb_enumkey.py
src/litestar_pulse/lib/: app.py  auth.py  compositetags.py  coretags.py  coretags.py.orig  crypt.py  debugger.py  dto.py  exceptions.py  fileupload.py  formbuilder.py  forminputs.py  forminputs.py.orig  middleware.py  popup.py  roles.py  template.py  utils.py  validators.py
src/litestar_pulse/templates/lp/: base.mako  generic_view.mako  home.mako  login.mako  passwd.mako  plainbase.mako
src/litestar_pulse/templates/lp/components/: selection_bar.mako  selection_bar.py  selection_bar_brython.py  selection_bar_js.mako
src/litestar_pulse/templates/lp/generics/: errorpage.mako  formpage.mako  page.mako  popup.mako
src/litestar_pulse/views/: __init__.py  api_v1.py  async_fileupload.py  baseview.py  components.py  enumkey.py  group.py  home.py  login.py  modelview.py  user.py  userdomain.py
tests/: test_crypt_pwdlib.py  test_formbuilder_proxy_values.py  test_formbuilder_tomselect_prerender.py  test_formbuilder_transform_flags.py  test_formbuilder_validate_transform_consistency.py  test_group_roles_update_dedup.py  test_user_attachment_cleanup.py  test_user_updated_by_circular_dependency.py  test_userdomain_attachment_cleanup.py  test_userdomain_fileobject_list_update.py  test_validators_list.py
